# auto-yolo-platform

./: .gitignore  README.md  pyproject.toml
app/: package-lock.json  package.json
app/src/: App.vue  main.js
app/src/api/: WsConnManger.js  api.js  progressbar.js
app/src/components/: FileMenuBar.vue  LayoutSidebar.vue  OpenFileDialog.vue  ProgressBar.vue
app/src/components/subcompoents/: FileMenuBarItem.vue  OpenFileDirItem.vue  OpenFilePathItem.vue  ProgressBarItem.vue  SubProgressBar.vue
app/src/router/: index.js
app/src/views/: DataCollection.vue  DataLabeling.vue  MenuBar.vue
src/: auto_annotation.py  auto_config.py  main.py  train.py
src/api/: managers.py  progressbar.py
src/auto_config/: auto_config.py
src/autoconfig/: auto_config.py
src/backend/: main.py  progressbar.py
src/data_collection/: video_collection.py
src/data_setcreation/: model_annotation.py
src/datacollection/: video_collection.py
src/dataset_creation/: model_annotation.py
src/datasetcreation/: model_annotation.py
src/servers/: __init__.py  backendserver.py  manage_repeat.py  message_server.py  transportation_hub.py  ws_server.py
src/servers/api/: __init__.py  openfile.py  progressbar.py
src/test/: test_api.py
src/test/test_server/api/: test_openfile.py
src/train_model/: train.py
src/ui/: main.py  ui.qml
test/: .coverage  test_api_openfile.py  test_api_progressbar.py  test_manage_repeat.py  test_message_server.py
test/test_servers/: test_manage_repeat.py  test_message_server.py
test/test_servers/test_api/: test_openfile.py  test_progressbar.py
