[project]
name = "yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "opencv-python>=4.12.0.88",
    "pywebview>=6.1",
    "rich>=14.2.0",
    "tensorboard>=2.20.0",
    "ultralytics>=8.3.237",
    "uvicorn[standard]>=0.38.0",
]
