[project]
name = "yolo"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "opencv-python>=4.12.0.88",
    "pywin32>=311",
    "ultralytics>=8.3.237",
    "uvicorn[standard]>=0.40.0",
]

[tool.setuptools]
packages = ['auto_config','data_collection','data_setcreation','servers','train_model']
