[project]
name = "yolo"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "httpx>=0.28.1",
    "opencv-python>=4.12.0.88",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pywin32>=311",
    "ultralytics>=8.3.237",
    "uvicorn[standard]>=0.40.0",
]
